--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google Analytics -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-QGPG2REEH9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-QGPG2REEH9");
+    </script>
+    <!-- End Google Analytics -->
+
     <meta charset="UTF-8" />
     <meta
       name="viewport"
